addons/kyverno/policies/medtech-log_retention_for_clinical_events-policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: medtech-log_retention_for_clinical_events
  annotations:
    rulehub.id: medtech.log_retention_for_clinical_events
    rulehub.title: <Policy Title>
    rulehub.links: |
      - <https://reference-1>
      - <https://reference-2>
spec:
  validationFailureAction: audit # or enforce
  background: true
  rules:
  - name: <rule-name>
    match:
      any:
      - resources:
          kinds:
          - "*"
    validate:
      message: medtech.log_retention_for_clinical_events: example validation
      pattern:
        metadata:
          labels:
            <required-label>: "?*"
